<resources>
    <string name="app_name">miniProject</string>
    <string name="action_settings">Settings</string>
    <string name="btn_calc">Calculator</string>
    <string name="btn_currency">Currency Converter</string>
    <string name="btn_unit">Unit Converter</string>
    <string name="btn_random">Random Generator</string>
    <string name="imperial_metric"><![CDATA[Imperial <-> Metric]]></string>
    <string name="temperature">Temperature</string>
    <string name="enterUnit">Enter</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="magneticField">Magnetic field</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="generate">Generate</string>
    <string name="calculateCurrency">Calculate</string>
    <string name="systemTime">System time</string>
    <string name="clearHistory">Clear history</string>
    <string name="light">Light</string>
</resources>