<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/gapToEdge"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="@dimen/gapToEdge"
        android:text="@string/btn_calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_currency"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/gapToEdge"
        android:layout_marginTop="@dimen/gapToEdge"
        android:layout_marginEnd="@dimen/gapToEdge"
        android:text="@string/btn_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calc" />

    <Button
        android:id="@+id/btn_unit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/gapToEdge"
        android:layout_marginTop="@dimen/gapToEdge"
        android:layout_marginEnd="@dimen/gapToEdge"
        android:text="@string/btn_unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_currency" />

    <Button
        android:id="@+id/btn_random"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/gapToEdge"
        android:layout_marginTop="@dimen/gapToEdge"
        android:layout_marginEnd="@dimen/gapToEdge"
        android:text="@string/btn_random"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_unit" />

</androidx.constraintlayout.widget.ConstraintLayout>