<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gapToEdge"
        android:layout_marginTop="@dimen/gapToEdge"
        android:layout_marginEnd="@dimen/gapToEdge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="150dp"
            android:layout_height="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="from"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:text="to"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="0dp"
            android:inputType="number"
            android:id="@+id/randomInput1"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/gapToEdge"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:text="1"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:layout_width="0dp"
            android:inputType="number"
            android:id="@+id/randomInput2"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="100"
            android:layout_marginTop="@dimen/gapToEdge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />




    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gapToEdge"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="@dimen/gapToEdge"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <CheckBox
                android:id="@+id/checkboxAccelerometer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sensorHeight"
                android:text="@string/accelerometer"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="209dp" />

            <CheckBox
                android:id="@+id/checkboxMagneticField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sensorHeight"
                android:text="@string/magneticField"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="209dp" />

            <CheckBox
                android:id="@+id/checkboxGyroscope"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sensorHeight"
                android:text="@string/gyroscope"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="209dp" />

            <CheckBox
                android:id="@+id/checkboxLight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sensorHeight"
                android:text="@string/light"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="209dp" />

            <CheckBox
                android:id="@+id/checkboxSystemTime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sensorHeight"
                android:checked="true"
                android:text="@string/systemTime"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="209dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/sensorValueAccelerometer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sensorHeight"
                android:gravity="left"
                android:text="Placeholder\nPlaceholder\nPlaceholder"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/sensorValueMagneticField"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sensorHeight"
                android:gravity="left"
                android:text="Placeholder\nPlaceholder\nPlaceholder"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/sensorValueGyroscope"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sensorHeight"
                android:gravity="left"
                android:text="Placeholder\nPlaceholder\nPlaceholder"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/sensorValueLight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sensorHeight"
                android:gravity="left"
                android:text="\nPlaceholder"
                android:textSize="10sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/randomOutput"
        android:layout_width="0dp"
        android:layout_height="@dimen/gapToEdge"
        android:layout_marginTop="@dimen/gapToEdge"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:gravity="center"/>
    <Button
        android:id="@+id/randomEnter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/gapToEdge"
        android:layout_marginTop="@dimen/gapToEdge"
        android:layout_marginEnd="@dimen/gapToEdge"
        android:text="@string/generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomOutput" />


</androidx.constraintlayout.widget.ConstraintLayout>